adding swagger-ui
