# src/swagger.json
@@ -1,8 +1,8 @@
 {
     "openapi": "3.0.0",
     "info": {
-      "title": "API de Upload de Imagens",
-      "description": "API para upload e recuperação de imagens",
+      "title": "Image-Compression-API",
+      "description": "API de compressão de imagens ",
       "version": "1.0.0"
     },
     "paths": {
@@ -19,6 +19,10 @@
                     "file": {
                       "type": "string",
                       "format": "binary"
+                    },
+                    "quality": {
+                      "type": "integer",
+                      "description": "Qualidade da compressão da imagem. Valor padrão é 50. Especifique um valor entre 1 e 100."
                     }
                   }
                 }
@@ -50,8 +54,8 @@
       },
       "/{filename}": {
         "get": {
-          "summary": "Recuperação de imagem",
-          "description": "Endpoint para recuperar uma imagem pelo nome do arquivo",
+          "summary": "Buscar imagens",
+          "description": "Endpoint para buscar as imagens comprimidas ou em seu tamanho completo",
           "parameters": [
             {
               "name": "filename",
@@ -60,7 +64,7 @@
               "schema": {
                 "type": "string"
               },
-              "description": "Nome do arquivo da imagem"
+              "description": "Nome do arquivo da imagem junto da extensão"
             },
             {
               "name": "size",
@@ -69,7 +73,7 @@
                 "type": "string",
                 "enum": ["min", "full"]
               },
-              "description": "Tamanho da imagem (opcional)"
+              "description": "Tamanho da imagem (min: comprimido | full: tamanho completo, não comprimido)"
             }
           ],
           "responses": {
@@ -98,4 +102,5 @@
       }
     }
   }
+  
   
